# gqlite

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  CodeCoverage.cmake  LICENSE  README.md
.github/workflows/: android.yml  cmake.yml  release.yml
data/: basketballplayer-2.X.ngql  provinces  provinces_link
example/: CMakeLists.txt  gen_scripts.py  main.c
include/: Category.h  Context.h  Error.h  GQliteImpl.h  Graph.h  IGraph.h  ISymbol.h  Loader.h  Memory.h  ParserEngine.h  Platform.h  Predicate.h  Relationship.h  ScanObserver.h  Schedule.h  Singlecton.h  Statement.h  StorageEngine.h  SubGraph.h  VirtualEngine.h  VirtualNetwork.h  compiler.h  gqlite.h  gson.h  gutil.h
include/Feature/: Feature.h  Gist.h  InvertIndex.h
include/Graph/: BipartiteGraph.h  DecisionNetwork.h  Edge.h  EntityEdge.h  EntityNode.h  GRAD.h  Group.h  IGraph.h  Node.h
include/Type/: Binary.h  Datetime.h  Edge.h  EdgeStmt.h  GQLType.h  Hash.h  Path.h  QueryCondition.h  Real.h  Type.h  Vector.h  Vertex.h  VertexStmt.h
include/base/: Clause.h  DOT.h  Debug.h  EdgeVisitor.h  Expression.h  Future.h  IDGenerator.h  MDBXPersistence.h  PACTree.h  Persistence.h  Promise.h  Serializer.h  Statement.h  ThreadPool.h  Variant.h  VertexVisitor.h  ast.h  function_traits.h  heap.h  list.h  type.h  visitor.h
include/base/gvm/: Chunk.h  Compiler.h  GVM.h  Object.h  Value.h
include/base/lang/: AST.h  ASTNode.h  ArrayExpression.h  AssignStmt.h  BlockStmt.h  CreateStmt.h  DropStmt.h  DumpStmt.h  EdgeDeclaration.h  GQLExpression.h  GroupStmt.h  IndexStmt.h  LambdaExpression.h  Literal.h  LiteralBinary.h  LiteralDatetime.h  LiteralNumber.h  LiteralString.h  MemberExpression.h  ObjectFunction.h  ObjectStmt.h  Property.h  QueryStmt.h  RemoveStmt.h  ReturnStmt.h  UpsetStmt.h  VariableDecl.h  VertexDeclaration.h  WalkDeclaration.h  WhereClause.h  lang.h
include/base/lang/visitor/: ByteCodeVisitor.h  IVisitor.h  (+3 more)
include/base/math/: Distance.h  Entropy.h
include/base/parallel/: GraphModel.h  gql_map.h
include/base/system/: Coroutine.h  EventEmitter.h  Observer.h  Platform.h  context.h
include/executor/mutate/: UpsetExecutor.h
include/executor/query/: FilterExecutor.h
include/gql/: creation.h  query.h  upset.h
include/memory/: memlin.h
include/operand/: GraphType.h  MatchPattern.h  SimilarityOp.h  skey.h
include/operand/algorithms/: DecisionTree.h  Hungarian.h  RandomWalk.h
include/operand/analysis/: DegreeCentrality.h  PageRank.h  Tarjan.h
include/operand/distance/: EditDistance.h
include/operand/match/: CTreeStrategy.h
include/operand/query/: HNSW.h
include/plan/: CreatePlan.h  Executor.h  Maintain.h  Mutate.h  PathPlan.h  Plan.h  PlanNode.h  QueryPlan.h  RemovePlan.h  ScanPlan.h  UpsetPlan.h  UtilPlan.h
include/plan/mutate/: RemovePlan.h  UpsetPlan.h  UtilPlan.h
include/plan/query/: PathPlan.h  QueryPlan.h  ScanPlan.h
include/schedule/: DefaultSchedule.h  FrogSchedule.h
include/walk/: AStarWalk.h  BSFWalk.h  BidirectionWalk.h  GreaterHeuristic.h  RandomWalk.h  WalkFactory.h
src/: GQLiteImpl.cpp  Platform.cpp  Relationship.cpp  ScanObserver.cpp  Schedule.cpp  StackFrame.cpp  Statement.cpp  VirtualEngine.cpp  VirtualNetwork.cpp  gql.l  gql.y  gqlite.cpp  gutil.cpp
src/Feature/: Feature.cpp  Gist.cpp  InvertIndex.cpp
src/Graph/: BipartiteGraph.cpp  DecisionNetwork.cpp  EntityEdge.cpp  EntityNode.cpp
src/ParserEngine/: ParserEngine.cpp
src/StorageEngine/: Graph.cpp  Loader.cpp  Predicate.cpp  StorageEngine.cpp  SubGraph.cpp
src/Type/: Binary.cpp  Datetime.cpp  Edge.cpp  EdgeStmt.cpp  Hash.cpp  Path.cpp  QueryCondition.cpp  Vector.cpp  Vertex.cpp  VertexStmt.cpp
src/base/: DOT.cpp  Debug.cpp  EdgeVisitor.cc  VertexVisitor.cc  ast.cc
src/base/gvm/: Chunk.cpp  Compiler.cpp  GVM.cpp  Object.cpp  Value.cpp
src/base/lang/: ASTNode.cpp  ArrayExpression.cpp  AssignStmt.cpp  BlockStmt.cpp  CreateStmt.cpp  DropStmt.cpp  DumpStmt.cpp  EdgeDeclaration.cpp  GQLExpression.cpp  GroupStmt.cpp  IndexStmt.cpp  LambdaExpression.cpp  LiteralBinary.cpp  LiteralNumber.cpp  LiteralString.cpp  MemberExpression.cpp  ObjectFunction.cpp  ObjectStmt.cpp  Property.cpp  QueryStmt.cpp  RemoveStmt.cpp  ReturnStmt.cpp  UpsetStmt.cpp  VariableDecl.cpp  VertexDeclaration.cpp  WalkDeclaration.cpp  WhereClause.cpp
src/base/math/: Distance.cpp  Entropy.cpp
src/base/system/: Coroutine.cpp  EventEmitter.cpp  Platform.cpp
src/executor/: Executor.cpp
src/executor/mutate/: UpsetExecutor.cpp
src/gql/: creation.cpp  query.cpp  upset.cpp
src/memory/: memmac.cpp  memwin.cpp
src/operand/: GraphType.cpp  MatchPattern.cpp  SimilarityOp.cpp
src/operand/algorithms/: DecisionTree.cpp  Hungarian.cpp  RandomWalk.cpp
src/operand/analysis/: DegreeCentrality.cpp  PageRank.cpp  Tarjan.cpp
src/operand/distance/: EditDistance.cpp
src/operand/match/: CTreeStrategy.cpp
src/operand/query/: HNSW.cpp
src/plan/: CreatePlan.cpp  Executor.cpp  PathPlan.cpp  Plan.cpp  QueryPlan.cpp  RemovePlan.cpp  ScanPlan.cpp  UpsetPlan.cpp  UtilPlan.cpp
src/plan/mutate/: RemovePlan.cpp  UpsetPlan.cpp  UtilPlan.cpp
src/plan/query/: PathPlan.cpp  QueryPlan.cpp  ScanPlan.cpp
src/schedule/: DefaultSchedule.cpp  FrogSchedule.cpp
src/walk/: AStarWalk.cpp  BSFWalk.cpp  RandomWalk.cpp  WalkFactory.cpp
test/: CMakeLists.txt  README.md  algorithm.cpp  android.sh  benchmark.cpp  coro.cpp  decision.cpp  fail.cpp  frog.cpp  gen_scripts.py  grammar.cpp  infomation.cpp  instructions.cpp  match.cpp  movielens.cpp  parser.cpp  ptree.cpp  query.cpp  regress.cpp  storage.cpp  vnet.cpp
test/basketballplayer-2.X/: expect.out  query.gql
test/benchmark/: vertex.gs
test/edge/: expect.out  grammar.gql
test/error/: errorinfo.gql
test/graphs/: bipartile_weight.dot  bipartile_weight_2.dot  bipartite.dot  g4.dot  g4_2.dot  random_walk.dot  simple_g.dot  simple_g_2.dot  simple_g_3.dot
test/query/: expect.out  grammar.gql
test/util/: grammar.gql
test/vertex/: grammar.gql
tool/: CMakeLists.txt  getopt.c  getopt.h  gqlcmd.cpp  gqlexport.cpp  l2lite.cpp  linenoise.hpp  stdout.h
tool/converter/: Converter.h  ngql.cpp  ngql.h
(+33 files in other folders)
